# PoseCap

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  GUIDELINES.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
addon/: __init__.py  blender_manifest.toml
contracts/: pyproject.toml
contracts/src/posecap_contracts/: __init__.py  backend_manifest.py  errors.py  model_assets.py
core/: pyproject.toml
core/src/corridorrig_core/: __init__.py  application.py  orientation.py  rotation.py  skeleton.py
core/src/posecap_core/: __init__.py  application.py  filters.py  landmark_pose.py  orientation.py  retarget.py
doc/: benchmarks.md  workflows.md
docs/: index.html
engine/: pyproject.toml
engine/src/posecap_engine/: cli.py  doctor.py  live_source.py  mediapipe_adapter.py  mediapipe_cli.py  pear_adapter.py  preview.py
packaging/: build_installer.ps1  build_mediapipe_payload.ps1  build_mediapipe_payload_linux.py  build_pear_payload.ps1  build_pear_payload_linux.py  install_linux.py  pear-source.lock.json
tests/: test_build_mediapipe_payload_linux.py  test_build_pear_payload_linux.py  test_import_boundaries.py  test_install_linux.py  test_installer_components.py  test_linux_installer_components.py  test_mediapipe_packaging.py  test_packaging_config.py  test_quality_gate_config.py  test_repository_governance.py
tools/: build_extension.py  build_mediapipe_payload.py  build_pear_payload.py  (+7 more)
(+167 files in other folders)
