[project]
name = "corridorrig-contracts"
version = "0.1.0"
description = "Wire formats shared by every CorridorRig process"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corridorrig_contracts"]
