[project]
name = "corridorrig-core"
version = "0.1.0"
description = "CorridorRig domain logic: pose mapping, keyframe policy, ports"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "corridorrig-contracts",
  "numpy>=1.26",
]

[tool.uv.sources]
corridorrig-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corridorrig_core"]
