[project]
name = "corridorrig-engine"
version = "0.1.0"
description = "CorridorRig engine bridge: PEAR inference, TCP pose stream, batch jobs"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "corridorrig-contracts",
  "corridorrig-core",
]

[tool.uv.sources]
corridorrig-contracts = { workspace = true }
corridorrig-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corridorrig_engine"]
